tests/reference/asr-intrinsics_04-fbc7b3a.stderr
semantic error: The kind of first argument of `iand` intrinsic must be the same as second argument
 --> tests/errors/intrinsics_04.f90:2:14
  |
2 |     print *, iand(1, 1_8)
  |              ^^^^^^^^^^^^ 
